# book-notes-mcp

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  schema.sql  supa_v2.sql  tmp_audio_test.py
agent/: __init__.py  query_agent.py
book_server/: __init__.py  ingestion.py  keep_client.py  keep_sync.py  official_keep_client.py  server.py  takeout_client.py
embeddings/: __init__.py  embed.py
processing/: __init__.py  media.py  summarizer.py
storage/: __init__.py  db.py  filesystem.py
tests/: test_ingestion.py  test_keep_client.py  test_keep_sync.py  test_official_keep_client.py  test_processing.py
web/: app.py
web/static/: index.html  manifest.json  sw.js
